--- a/ConcussionCalendar/app/src/main/AndroidManifest.xml
+++ b/ConcussionCalendar/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.ConcussionCalendar.NoActionBar">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
