--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 25 20:49:57 PDT 2021
-sdk.dir=C\:\\Users\\rohan\\AppData\\Local\\Android\\Sdk
+#Thu Mar 25 21:12:07 PDT 2021
+sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
