--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 28 18:52:16 PDT 2021
-sdk.dir=C\:\\Users\\rohan\\AppData\\Local\\Android\\Sdk
+#Fri Apr 23 15:20:42 PDT 2021
+sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
