--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 25 20:49:57 PDT 2021
-sdk.dir=C\:\\Users\\rohan\\AppData\\Local\\Android\\Sdk
+#Wed May 05 22:06:26 PDT 2021
+sdk.dir=/Users/juliazhong/Library/Android/sdk
