--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 05 22:06:26 PDT 2021
-sdk.dir=/Users/juliazhong/Library/Android/sdk
+#Fri May 14 20:35:02 PDT 2021
+sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
